<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".SignIn">


    <TextView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="15sp"
        android:rotationY="180"
        app:drawableLeftCompat="@drawable/arrow" />


    <TextView
        android:id="@+id/need_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:text="@string/forget_your_password"
        android:textColor="@color/white" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/need_help"
        android:layout_marginTop="30dp"
        android:background="@drawable/signup_background">


        <RelativeLayout
            android:id="@+id/signup_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_get_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="40sp"
                android:text="@string/let_s_get_something"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/text_create_to_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_get_start"
                android:layout_marginStart="25sp"
                android:text="@string/good_to_see_you_back" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/sign_up_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sign_up_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/custom_phone_icon"
                android:drawablePadding="5sp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="number"
                android:padding="5sp"
                android:textSize="15sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/custom_password_icon"
                android:drawablePadding="5sp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5sp"
                android:textSize="15sp"
                tools:ignore="LabelFor,TextFields" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/reminder_me_next_time"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/sign_up_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                app:cardBackgroundColor="@color/mainColor"
                app:cardCornerRadius="30dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/btn_sign_in"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_account" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/Sign_up"
                    android:textColor="@color/mainColor" />

            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>


    <ProgressBar
        android:id="@+id/SignIn_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


</RelativeLayout>